# r1-models

./: CMakeLists.txt  CONTRIBUTING.md  README.md
tests/: r1-model-test.cpp
urdf/: CMakeLists.txt
urdf/R1Mk3/conf/: gazebo_cer_torso.ini  r1mk3_gz_sim.xml
urdf/R1Mk3/conf/gazebo_cer_odometry/: gazebo_cer_odometry_nws_ros2.xml
urdf/R1Mk3/conf/wrappers/motorControl/: alljoints_ros2_wrapper.xml
urdf/R1Mk3/conf/wrappers/sensors/: lidar_double_nws_ros2.xml  rgbd_camera_nws_ros2.xml  rgbd_camera_nws_ros2_left.xml  rgbd_camera_nws_ros2_right.xml  rgbd_camera_nws_yarp_left.xml  rgbd_camera_nws_yarp_right.xml
urdf/R1Mk3/robots/R1Mk3Gazebo/: model.urdf
urdf/R1Mk3/robots/R1Mk3Gazebo_minContacts/: model.urdf
urdf/R1Mk3/robots/R1SN003/: model.urdf
urdf/creo2urdf/data/R1Mk3/: R1Mk3_all_options_gazebo.yaml  R1Mk3_all_options_minContacts.yaml  R1Mk3_all_options_stereo.yaml  README.md  base_1_0.yaml
urdf/creo2urdf/data/common/: camera_realsense_addon.yaml  stereo_addon.yaml
